# libmortonpy

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ext/: morton_ext.cpp
src/libmorton/: __init__.py  _vectorized.py
tests/: test_scalar.py  test_vectorized.py
